upload tizen1.0 source

--- a/debian/control
+++ b/debian/control
@@ -7,12 +7,12 @@ Build-Depends: debhelper (>= 5), dlog-dev, libmm-sound-dev, capi-base-common-dev
 
 Package: capi-media-audio-io
 Architecture: any
-Depends: ${shilbs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: An Audio Input & Audio Output library in Tizen Native API
 
 Package: capi-media-audio-io-dev
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, capi-media-audio-io (= ${Source-Version}), dlog-dev, libmm-sound-dev, capi-base-common-dev, capi-media-sound-manager-dev
+Depends: ${shlibs:Depends}, ${misc:Depends}, capi-media-audio-io (= ${Source-Version}), capi-base-common-dev, capi-media-sound-manager-dev
 Description: An Audio Input & Audio Output library in Tizen Native API (DEV)
 
 Package: capi-media-audio-io-dbg
